# Bidibip

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  package.json  todo.md
.github/workflows/: ci.yml
crates/bidibip/: Cargo.toml
crates/bidibip-core/: Cargo.toml
crates/bidibip-core/src/: main.rs
crates/bidibip-core/src/core/: config.rs  create_command_detailed.rs  error.rs  global_interface.rs  interaction_utils.rs  json_to_message.rs  logger.rs  message_reference.rs  mod.rs  module.rs  utilities.rs
crates/bidibip-core/src/migration/: mod.rs  modo_migration.rs  repost_migration.rs  warn_migration.rs
crates/bidibip-core/src/modules/: anti_spam.rs  help.rs  history.rs  log.rs  mod.rs  modo.rs  reglement.rs  repost.rs  say.rs  user_count.rs  utilities.rs  warn.rs  welcome.rs
crates/bidibip-core/src/modules/advertising/: ad_config.rs  ad_utils.rs  mod.rs
crates/bidibip-core/src/modules/advertising/steps/: fixed_term.rs  freelance.rs  internship.rs  main.rs  mod.rs  open_ended.rs  recruiter.rs  volunteering.rs  work_study.rs  worker.rs  workstudy.rs
crates/bidibip/src/: main.rs
crates/modules/: Cargo.toml
crates/modules/src/: anti_spam.rs  help.rs  history.rs  lib.rs  log.rs  modo.rs  reglement.rs  repost.rs  say.rs  user_count.rs  utilities.rs  warn.rs  welcome.rs
crates/modules/src/advertising/: ad_utils.rs  mod.rs
crates/modules/src/advertising/steps/: fixed_term.rs  freelance.rs  internship.rs  main.rs  mod.rs  open_ended.rs  recruiter.rs  volunteering.rs  work_study.rs  worker.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  create_command_detailed.rs  global_interface.rs  interaction_utils.rs  json_to_message.rs  lib.rs  logger.rs  module.rs  utilities.rs
docker/: .env  compose.yaml
old_src/: index.js
scripts/: Dockerfile  download_run.sh
(+15 files in other folders)
