[package]
name = "bidibip-core"
version = "4.0.0"
edition = "2018"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
serenity = { version = "0.12.4" }
serde = { version = "1.0.217" }
serde_json = "1.0.138"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
rand = "0.9.0"
regex = "1.11.1"

# Note : keep the same version as serenity-rs (don't update)
reqwest = { version = "0.11.27", features = ["json"] }