[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serenity = { version = "0.12.4" }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.97"
serde_json = "1.0.138"
tracing = "0.1.40"
chrono = "0.4.39"
reqwest = "0.11.27"
tracing-subscriber = "0.3.19"